# squares

./: README.md  diagonals.ipynb  pyproject.toml  squares.ipynb
