[tool.poetry]
name = "squares"
version = "0.1.0"
description = "Using machine learning to determine the growth rate of tiling squares"
authors = ["Gary Loayza <loayzag91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.19.4"
pandas = "^1.1.4"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
